--- a/style.css
+++ b/style.css
@@ -5,14 +5,75 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body{
+    background-color: #ededed;
+}
+
 .container{
+    background-color: #fff;
     max-width: 1200px;
     margin: auto;
 
 }
 
 /*päis ja menüü*/
+.header{
+    background-color: #666;
+    color: #fff;
+    line-height: 100px;
+    padding: 0 40px;
+}
+
+.menu, .footer{
+    background-color: #000;
+    color: #fff;
+}
+
+.menu a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu a:hover{
+    color: #FF0000;
+    text-decoration: underline;
+}
+
+.menu ul{
+    list-style-type: none;
+    display: flex;
+    padding: 12px 40px;
+}
+
+.menu li{
+    margin-right: 30px;
+}
+
 
 /*sisu*/
+.content h1, .content h2{
+    font-weight: 400;
+    color: #444;
+}
+
+.content{
+    padding: 10px 40px;
+}
+
+.content h1, .content h2, .content p{
+    margin: 20px 0;
+}
+
+.content img{
+    width: 70%
+}
+
+.content ul{
+    margin: 0 40px;
+}
 
 /*jalus*/
+.footer{
+    line-height: 100px;
+    padding: 0 40px;
+}
