--- a/cv.css
+++ b/cv.css
@@ -5,10 +5,6 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-    background-color: #e03d3d;
-}
-
 .container{
     background-color: #fff;
     max-width: 1200px;
@@ -20,7 +16,7 @@ body{
 .header{
     background-color: #97a7bc;
     color: #fff;
-    line-height: 300px;
+    line-height: normal;
     padding: 20px 500px;
     font-size: larger;
 }
